fix: add new expressions to english dictionary #26

--- a/src/main/resources/l10n/JabRef_en.properties
+++ b/src/main/resources/l10n/JabRef_en.properties
@@ -2530,3 +2530,8 @@ Multiline=Multiline
 
 Main\ directory\ not\ found=Main directory not found
 Please\ select\ a\ valid\ main\ directory\ under=Please select a valid main directory under
+
+Copied\ search\ histories\ to\ clipboard=Copied search histories to clipboard
+Copy\ Search\ History=Copy Search History
+Search\ History=Search History
+See,\ modify\ and\ reuse\ your\ search\ history=See, modify and reuse your search history
